--- a/TP_Final/code/app/src/main/res/layout/activity_main.xml
+++ b/TP_Final/code/app/src/main/res/layout/activity_main.xml
@@ -66,14 +66,15 @@
                 android:textSize="21sp"
                 android:textStyle="bold" />
 
-            <TextView
+            <Chronometer
                 android:id="@+id/label_temps"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:background="#252525"
+                android:contextClickable="false"
+                android:countDown="false"
                 android:gravity="center"
-                android:text="00:00"
                 android:textColor="#FFFFFF"
                 android:textSize="21sp"
                 android:textStyle="bold" />
@@ -241,8 +242,18 @@
                 android:id="@+id/spacer_h"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.1"
-                android:orientation="horizontal"></LinearLayout>
+                android:layout_weight="0.4"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/undo_img"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_weight="0"
+                    app:srcCompat="@drawable/undo" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/desc_layer"
